crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__variable__early_bound.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/early_bound.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var a @1 "outer")
   (block
      (fun foo @2 []
         (block
            (print (global a @1))))
      (expr (call +3 (local foo @2)))
      (var a @3 "inner")
      (expr (call +4 (local foo @2)))))

----- stderr -----
